Banner and Seervices crud added

--- a/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
+++ b/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
@@ -42,6 +42,8 @@
                 <a class="collapse-item" [routerLink]="['/app/shop-collection']">Kolleksiya</a>
                 <a class="collapse-item" [routerLink]="['/app/brand']">Brend</a>
                 <a class="collapse-item" [routerLink]="['/app/deal-of-day']">Günün Təklifi</a>
+                <a class="collapse-item" [routerLink]="['/app/service']">Xidmətlər</a>
+                <a class="collapse-item" [routerLink]="['/app/banner']">Banner</a>
                 <a class="collapse-item" [routerLink]="['/app/discount']">Endirim</a>
                 <a class="collapse-item" [routerLink]="['/app/social-links']">Sosial Linklər</a>
                 <a class="collapse-item" [routerLink]="['/app/settings']">Tənzimləmələr</a>
