--- a/Front/final-project/src/app/shared/components/ads-banner/ads-banner.component.html
+++ b/Front/final-project/src/app/shared/components/ads-banner/ads-banner.component.html
@@ -2,15 +2,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-lg-8">
-                <div class="big-banner-content">
-                    <h4>Best Wireless Speaker</h4>
-                    <p>For Perfect Home</p>
+                <div class="big-banner-content" style="background-image: url({{mediumBanner?.image}});">
+                    <h4>{{mediumBanner?.title}}</h4>
+                    <p>{{mediumBanner?.subtitle}}</p>
                 </div>
             </div>
             <div class="col-md-6 col-lg-4">
-                <div class="small-banner-content">
-                    <h4>Apple MacBook Pro</h4>
-                    <p>A touch of Genius</p>
+                <div class="small-banner-content" style="background-image: url({{smallBanner?.image}});">
+                    <h4>{{smallBanner?.title}}</h4>
+                    <p>{{smallBanner?.subtitle}}</p>
                 </div>
             </div>
         </div>
