--- a/Front/final-project/src/app/shared/components/offer/offer.component.scss
+++ b/Front/final-project/src/app/shared/components/offer/offer.component.scss
@@ -3,10 +3,9 @@
   align-items: center;
   margin-bottom: 30px;
   .icon {
-    img {
-      max-width: 100%;
-    }
     margin-right: 20px;
+    font-size: 30px;
+    color: #fd1c5e;
   }
   .offer-content {
     h4 {
