--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -80,12 +80,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="small-banner-content"
-                    style="background-image: url(https://res.cloudinary.com/dyqcmbewn/image/upload/v1619193767/infixvuci/macbook-banner_xhzu2n.jpg);">
+                <div class="small-banner-content" style="background-image: url({{bigBanner?.image}});">
                     <div class="small-banner-text">
-                        <h6 class="sub-title">Apple</h6>
-                        <h4 class="big-title">Yeni Nəsil İldırım Sürətli Macbooklar</h4>
-                        <p>Sadəcə <span>1299 ₼</span> başlayaraq</p>
+                        <h6 class="sub-title">{{bigBanner?.title}}</h6>
+                        <h4 class="big-title">{{bigBanner?.subtitle}}</h4>
+                        <p [innerHtml]="bigBanner?.text"></p>
                     </div>
                 </div>
             </div>
@@ -95,21 +94,8 @@
 <section id="offers">
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/delevary.png'" [title]="'Pulsuz Çatdırılma'"
-                    [text]=" '500 manata qədər sifarişdə pulsuz çatdırılma' "></app-offer>
-            </div>
-            <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/clock.png'" [title]="'Geri qaytarma imkanı'"
-                    [text]=" 'Fikir dəyişikliyi istisna' "></app-offer>
-            </div>
-            <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/payment.png'" [title]="'Təhlükəsiz ödəniş'"
-                    [text]=" 'Dünyandakı təhlükəsiz ödəniş metodları ilə' "></app-offer>
-            </div>
-            <div class="col-sm-6 col-lg-3">
-                <app-offer [icon]="'/assets/icons/help.png'" [title]="'24/7 Dəstək'"
-                    [text]=" 'Günün 24 saatı dəstək xətti' "></app-offer>
+            <div *ngFor="let offer of offers" class="col-sm-6 col-lg-3">
+                <app-offer [icon]="offer.icon" [title]="offer.title" [text]="offer.subtitle"></app-offer>
             </div>
         </div>
     </div>
