--- a/Front/final-project/src/assets/scss/_tools.scss
+++ b/Front/final-project/src/assets/scss/_tools.scss
@@ -512,6 +512,9 @@ table {
   font-size: 16px;
   font-weight: 500;
 }
+.color-pink {
+  color: #fd1c5e !important;
+}
 //responsive
 @media only screen and (min-width: 1400px) {
   .container {
