--- a/Front/final-project/src/app/shared/components/offer/offer.component.html
+++ b/Front/final-project/src/app/shared/components/offer/offer.component.html
@@ -1,6 +1,6 @@
 <div class="offer">
     <div class="icon">
-        <img src="{{icon}}" alt="">
+        <i class="{{icon}}"></i>
     </div>
     <div class="offer-content">
         <h4>{{title}}</h4>
