recovery password and ofrget password finished

--- a/Front/final-project/src/app/shared/components/deal-of-day/deal-of-day.component.scss
+++ b/Front/final-project/src/app/shared/components/deal-of-day/deal-of-day.component.scss
@@ -27,6 +27,8 @@
     }
     .deal-product {
       text-align: right;
+      margin: 30px 0;
+      margin-right: 10px;
       a {
         img {
           max-width: 100%;
