--- a/Front/final-project/src/app/views/app/shop-details/shop-details.component.scss
+++ b/Front/final-project/src/app/views/app/shop-details/shop-details.component.scss
@@ -107,6 +107,9 @@
           color: #090b17;
           margin-right: 15px;
         }
+        .active {
+          color: $color-pink-second;
+        }
       }
     }
     .product-details-footer {
