--- a/Front/final-project/src/app/views/auth/forget-password/forget-password.component.html
+++ b/Front/final-project/src/app/views/auth/forget-password/forget-password.component.html
@@ -1,1 +1,29 @@
-<p>forget-password works!</p>
+<app-header></app-header>
+<section id="forget-password">
+    <div class="container">
+        <div class="auth-form">
+            <div class="auth-inner">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h3>Şifrə bərpası</h3>
+                        <form [formGroup]="form" (ngSubmit)="send()">
+                            <div class="form-group">
+                                <input type="text" placeholder="E-poçt" name="email" formControlName="email">
+                                <div *ngIf="submitted && f.email.errors" class="text-danger">
+                                    <div *ngIf="f.email.errors.required">E-poçt boş ola bilməz</div>
+                                    <div *ngIf="f.email.errors.email">E-poçt düzgün yazılmayıb</div>
+                                </div>
+                            </div>
+                            <button class="btn btn-pink w-100 mt-2" type="submit">Şifrəni bərpa et</button>
+                        </form>
+                        <div class="signup d-flex">
+                            <p>Hesabın yoxdu? </p>
+                            <a [routerLink]="['/auth/register']">Qeydiyatdan keç</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<app-footer></app-footer>
