--- a/Front/final-project/src/app/views/auth/recovery-password/recovery-password.component.html
+++ b/Front/final-project/src/app/views/auth/recovery-password/recovery-password.component.html
@@ -1,1 +1,37 @@
-<p>recovery-password works!</p>
+<app-header></app-header>
+<section id="recovery-password">
+    <div class="container">
+        <div class="auth-form">
+            <div class="auth-inner">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h3>Şifrəni yenilə</h3>
+                        <form [formGroup]="form" (ngSubmit)="recovery()">
+                            <div class="form-group">
+                                <input type="password" placeholder="Şifrə" name="password" formControlName="password">
+                                <div *ngIf="submitted && f.password.errors" class="text-danger">
+                                    <div *ngIf="f.password.errors.required">Şifrə boş ola bilməz</div>
+                                    <div *ngIf="f.password.errors.minlength">Şifrə mimimum 8 xarakter olmalıdır</div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" placeholder="Şifrəni təkrarla" name="confirmPassword"
+                                    formControlName="confirmPassword">
+                                <div *ngIf="submitted && f.confirmPassword.errors" class="text-danger">
+                                    <div *ngIf="f.confirmPassword.errors.required">Şifrə təkrarı boş ola bilməz</div>
+                                    <div *ngIf="f.confirmPassword.errors.notsame">Şifrə uyğun deyil</div>
+                                </div>
+                            </div>
+                            <button class="btn btn-pink w-100 mt-2" type="submit">Şifrəni bərpa et</button>
+                        </form>
+                        <div class="signup d-flex">
+                            <p>Hesabın yoxdu? </p>
+                            <a [routerLink]="['/auth/register']">Qeydiyatdan keç</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<app-footer></app-footer>
